--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./app.js"></script>
-    <title>Image-Gallery</title>
-</head>
-<body>
-<div id="Thumbnail-container"></div> 
-<div id="main-image-container"></div>
-<!--I can use -->
-    
-</body>
+    <script src="./app.js" defer></script>
+    <title>Image Gallery</title>
+  </head>
+  <body>
+    <div class="main-image-container">
+        <div class ="image-container">
+            <div class="item">
+                <img src="/flower-Peony.jpg" alt="flower-Peony">
+            </div>
+            <div class="item">
+                <img src="/marigold.jpg" alt="marigold">
+            </div>
+            <div class="item">
+                <img src="/Rose.jpg" alt="Rose">
+            </div>
+        </div>
+
+        <div class="change-image">
+            <button id="prev">prev</button>
+            <button id="next">next</button>
+        </div>
+    </div>
+
+     <div class ="thumbnail-container">
+            <div class="item1">
+                <img src="/flower-Peony.jpg" alt="flower-Peony">
+            </div>
+            <div class="item1">
+                <img src="/marigold.jpg" alt="marigold">
+            </div>
+            <div class="item1">
+                <img src="/Rose.jpg" alt="Rose">
+            </div>
+        </div>
+
+  </body>
 </html>
